Many more changes and polishing, reverted back to expo router. The Gateway isn't working properly and it's driving me insane.
